# choreo

./: .gitignore  .gitmodules  Checksols.py  Choreo_MP_test.py  Choreo_cython_funs.c  Choreo_cython_funs.pyx  Choreo_find.py  Choreo_funs.py  Choreo_reconverge.py  Choreo_sniffall.py  Choreo_sniffall2.py  Choreo_sniffall_deflated.py  Choreo_sniffall_min.py  Choreo_sniffall_old.py  Choreo_sniffall_zerograd.py  Choreo_target_custom (copy).py  Choreo_target_custom.py  Choreo_target_custom2.py  Choreo_target_custom_precond.py  Choreo_target_custom_test.py  FD_test.py  LICENSE  Make_no_trace_vid.py  README.md  README.rst  Run_jobs.py  Tests_sym.py  _nonlin_mod.py  _root_mod.py  build_requirements.txt  choreo_env.yml  choreo_env_intel.yml  choreo_env_no_spqr.yml  choreo_test_env.yml  cibuildwheel_all.sh  cstr_test.py  environment-mkl.yml  environment.yml  environment_0.26.yml  environment_311.yml  (+18 more)
.devcontainer/: Dockerfile
.github/ISSUE_TEMPLATE/: blank_issue.md  bug_report.md  feature_request.md
.github/workflows/: build_all.yml  build_all_and_deploy.yml  build_all_and_deploy_NODOCS.yml  build_pyodide.yml  cibuildwheel_all.yml  pages.yml  sphinx.yml  tox_regression_tests.yml  unit_tests_on_diverse_os.yml
GUI_scripts/: Load_GUI_params_and_save_init_CLI.py
LICENCES/: jsgif_licence.txt  pyFFTW_license.txt  scipy_license.txt  treejs_licence.txt
LICENSES/: Readme.md  cpython_license.txt  kepler.py_license.txt  npyjs_licence.txt
NewSym_data/1q2q/: choreo_config.json
NewSym_data/2C3C5C/: choreo_config.json
NewSym_data/2D1/: choreo_config.json
NewSym_data/2q2q/: choreo_config.json
NewSym_data/3C17k/: choreo_config.json
NewSym_data/3C2k/: choreo_config.json
NewSym_data/3C4k/: choreo_config.json
NewSym_data/3C5k/: choreo_config.json
NewSym_data/3D/: choreo_config.json
NewSym_data/3D1/: choreo_config.json
NewSym_data/3D2k/: choreo_config.json
NewSym_data/3D7k2/: choreo_config.json
NewSym_data/3Dp/: choreo_config.json
NewSym_data/3q/: choreo_config.json
NewSym_data/3q3q/: choreo_config.json
NewSym_data/3q3qD/: choreo_config.json
NewSym_data/4C5k/: choreo_config.json
NewSym_data/4D/: choreo_config.json
NewSym_data/5Dq/: choreo_config.json
NewSym_data/6C/: choreo_config.json
NewSym_data/6Ck5/: choreo_config.json
NewSym_data/6q6q/: choreo_config.json
NewSym_data/test_3D5k/: choreo_config.json
NumericalTank_data/: Simo_init_cond.txt  Simo_init_cond_no_mod.txt  init_data.txt  init_data_np.txt
choreo/: Choreo_cython_funs.pyx  Choreo_cython_funs_2D.pyx  Choreo_cython_funs_parallel.pyx  Choreo_cython_funs_serial.pyx  Choreo_cython_scipy_plus.pyx  Choreo_cython_scipy_plus_ODE.pyx  Choreo_find.py  Choreo_funs.py  Choreo_helper.py  Choreo_numba_funs.py  Choreo_plot.py  Choreo_run.py  Choreo_scipy_plus.py  Choreo_scipy_plus_Hierarchical_Clustering.py  Choreo_scipy_plus_ODE.py  Choreo_scipy_plus_linalg.py  Choreo_scipy_plus_nonlin.py  NBodySyst_build.py  __init__.py  benchmark.py  default_fft.py  find.py  find_new.py  funs.py  funs_new.py  helper.py  numba_funs.py  numba_funs_new.py  optional_pyfftw.py  run.py  tools.py
choreo/GUI/: Pyodide_worker.js  __init__.py  anim.js  choreo_GUI.js  gallery_descriptor.json  http_server.py  index.html  manage_gallery.py  robots.txt
choreo/benchmark/: __init__.py  _benchmark.py
choreo/cython/: _ActionSym.pxd  _ActionSym.pyx  _NBodySyst.pyx  _NBodySyst_ann.pxd  _NBodySyst_ann.pyx  __init__.py  funs.pyx  funs_new.pyx  funs_new___.pyx  funs_parallel.pyx  funs_serial.pyx  optional_pyfftw.pxd  optional_pyfftw_False.pyx  (+6 more)
choreo_GUI/: .nojekyll  Choreo_GUI.html  MakeGalleryDescriptor.py  Pyodide_worker.js  anim.js  anim_backup.js  choreo_GUI.js  choreo_GUI.test.js  gallery_descriptor.json  gallery_descriptor_old.json  http_server.py  index.html  index_toto.html  orbit_data_small.js  py-worker.js  sitemap.xml
docs/: Makefile  file_scraper.py  requirements.txt
environment/: environment-build-macos.txt  environment-dev.yml  environment-linux.txt  environment-linux.yml
examples/: README.rst  ex1.py  ex2.py  networkx.py
lib/: libspqr.so.2.0.9
requirements/: requirements-bench.txt  requirements-build.txt  requirements-cibuildwheel-test.txt  requirements-cli.txt  requirements-docs.txt  requirements-full.txt  requirements-gui.txt  requirements-test-cli.txt  requirements-test-gui.txt  requirements-test.txt  requirements.txt
scripts/: Benchmark_NewSymDev.py  Benchmark_NewSymDev_2.py  C_vs_D.py  CheckButcher.py  Check_Gallery.py  Check_Grad_Forces.py  Choreo_Globalsym.py  Choreo_init_state.py  Choreo_sniffall.py  Choreo_target_custom.py  Choreo_test_Globalsym.py  Compute_Stability_ODE.py  FFTW_wisdom.py  FFT_backend_comparison.py  FFT_perf.py  FFT_sym.py  FunctionIntegratorTests.py  FuseFolders.py  FuseTwoFolders.py  GUI_in_CLI.py  GUI_in_CLI_old.py  GenerateQuadratures.py  Integration_on_segment_revisited.py  Investigate_Hessian.py  Investigate_Hill.py  Investigate_Stability.py  Investigate_StabilityODE.py  Investigate_Stability_new.py  LoadTransformOverwrite.py  LoadTransformOverwrite_old.py  Load_GUI_params_and_redraw.py  Load_GUI_params_and_run.py  LookForSignature.py  Make_no_trace_vid.py  NewSymsDev.py  NewSymsPYFFTW_wisdom_export.py  NewSymsSearch.py  NewSymsTime.py  NewSymsTime2.py  NewSymsTimeSave.py  (+69 more)
sparseqr/: sparseqr_gen.py
tests/: CheckQuadraturePrecision.py  FD_test.py  FD_test_2.py  FFT_inv.py  FFT_perf.py  FunctionIntegratorTests.py  Make_no_trace_vid.py  SymplecticIntegratorTests.py  __init__.py  check_backend_equal.py  conftest.py  gather_junit.py  grad_fft_test.py  grad_fft_vel_test.py  ihfft_vs_rfft.py  plot_coeffs.py  test_ActionSym.py  test_Butcher_tables.py  test_ChoreoSym.py  test_EFT.py  test_NBodySyst.py  test_ODE.py  test_basic.py  test_choreo_class.py  test_comp_sum.py  test_config.py  test_config_NBodySyst.py  test_config_ODE.py  test_config_decorators.py  test_config_precision.py  test_duplicates.py  test_find.py  test_integration_tables.py  test_numba.py  test_numba_matmul.py  test_pyo.py  test_quad_ODE.py  test_scipy_nonlin.py  test_scipy_plus.py  test_scipy_plus_linalg.py  (+1 more)
(+1654 files in other folders)
